js/src/tests/test262/built-ins/NativeErrors/TypeError/prototype/name.js
assert
.
sameValue
(
TypeError
.
prototype
.
name
"
TypeError
"
)
;
verifyNotEnumerable
(
TypeError
.
prototype
"
name
"
)
;
verifyWritable
(
TypeError
.
prototype
"
name
"
)
;
verifyConfigurable
(
TypeError
.
prototype
"
name
"
)
;
reportCompare
(
0
0
)
;
